name:                Anabel
version:             0.1.0.0
synopsis:            An implementation of type theory, focused on computation and extensibility
description:         Please see README.md
homepage:            http://github.com/pthariensflame/Anabel#readme
license:             BSD3
license-file:        LICENSE
author:              Alexander Altman
maintainer:          alexanderaltman@me.com
copyright:           Copyright: (c) 2015 Alexander Altman
category:            Languages
                   , Dependent Types
build-type:          Simple
-- extra-source-files:
cabal-version:       >= 1.22

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.8 && < 5
  default-language:    Haskell2010

executable anabel
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Anabel
  default-language:    Haskell2010

test-suite anabel-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Anabel
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/pthariensflame/Anabel
